test/files/pos/t7232b/List.java
package pack;

public class List {
	public void packList() {}
}
