test/files/neg/raw-types-stubs/Raw_2.java
public abstract class Raw_2 {
  public abstract void raw(Object list);
  public abstract void raw(M_1 list);
}
